--- a/lib/kronos_web/components/layouts/root.html.heex
+++ b/lib/kronos_web/components/layouts/root.html.heex
@@ -7,9 +7,11 @@
     <.live_title default="Kronos" suffix=" · Phoenix Framework">
       {assigns[:page_title]}
     </.live_title>
-    <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
-    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
-    </script>
+    <LiveReact.Reload.vite_assets assets={["/js/app.js", "/css/app.css"]}>
+      <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+      <script type="module" phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
+      </script>
+    </LiveReact.Reload.vite_assets>
   </head>
   <body class="bg-white">
     {@inner_content}
